PF-2571: rework: all users to delete all subcategories/options of a PM (put back the Default/Default ones when they do). Show "N/A" when there is no data for a year of a reported PM. Prevent modal from scrolling the collapsed panel out of view when collapsing the PMs on the expected and reported pages. Pork: fix NCRP css for PM panels with no header

--- a/Source/ProjectFirma.Web/Content/Bootstrap/firma/ncrp.theme.css
+++ b/Source/ProjectFirma.Web/Content/Bootstrap/firma/ncrp.theme.css
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 400;
   font-stretch: normal;
-  src: url(https://fonts.gstatic.com/s/opensans/v29/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVc.ttf) format('truetype');
+  src: url(https://fonts.gstatic.com/s/opensans/v34/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVc.ttf) format('truetype');
 }
 @font-face {
   font-family: 'Roboto';
@@ -419,6 +419,9 @@ table.summaryLayout th,
 .panelFirma .panelTitle h2 .glyphicon,
 .panelFirma .panelTitle h3 .glyphicon {
   color: #fff;
+}
+.panel-group .panel.panelFirma {
+  border-radius: 0px;
 }
 #contentForTOC .panelFirma {
   border-color: #738c1f;
